@@ -2,8 +2,11 @@ AI stuff
 The AI ships should occasionally turn and/or change speed
 
 Torpedo stuff
-Create weapons display (F3)
 Create torpedo code (ShipType 3, ShipClass 5)
+  Torpedoes will be ships, but stored in a linked list rather than
+  an array due to their constant changes.
+  And torps will have severe fuel restrictions.
+  (At some point the ships should move to a linked-list too.)
 Display torpedos on map
 Add noise maker (ShipType 4, ShipClass 6)
 
@@ -12,5 +15,4 @@ Add missions and objectives
 Add thermal layer?
 
 Fix ESM signal analysis box.
-Create Weapons screen (probably assign to F3)
 
